--- a/FastDelete.vcxproj
+++ b/FastDelete.vcxproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <ClInclude Include="ThreadQueue.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
